# GUI_AI_ocr

./: .gitignore  2223_CLU_GN-2511.features.json  333_CLU_JR-1251A.features.json  Haryana_all.csv  Haryana_all_khasra_split.csv  Haryana_all_khasra_split_test.csv  all_text_full.txt  api_server.py  count.py  diagnose_openai_ocr.py  ghaziabad_extracted.csv  json_to_csv.py  json_to_csv2.py  local_to_aws.py  main.py  move_selected_files_folders.py  move_selected_folders.py  ocr.py  ocr_output.json  ocr_output.txt  ocr_output_22.json  params.yaml  pdf_extraction.py  pdf_extraction2.py  pdfplumber_all_text.txt  pyproject.toml  templates.py  test.py  test_ocr.py
csv_output/: Book_1_Peshi_Register_from_01-01-2006_to_30-06-2006.csv  Book_1_Peshi_Register_from_01-01-2007_to_30-06-2007.csv  Book_1_Peshi_Register_from_01-01-2008_to_30-06-2008.csv  Book_1_Peshi_Register_from_01-01-2009_to_30-06-2009.csv  Book_1_Peshi_Register_from_01-01-2010_to_30-06-2010.csv  Book_1_Peshi_Register_from_01-01-2011_to_30-06-2011.csv  Book_1_Peshi_Register_from_01-01-2012_to_30-06-2012.csv  Book_1_Peshi_Register_from_01-01-2014_to_31-01-2014.csv  Book_1_Peshi_Register_from_01-01-2015_to_31-01-2015.csv  Book_1_Peshi_Register_from_01-01-2016_to_31-01-2016.csv  Book_1_Peshi_Register_from_01-02-2014_to_28-02-2014.csv  Book_1_Peshi_Register_from_01-02-2016_to_29-02-2016.csv  Book_1_Peshi_Register_from_01-03-2014_to_31-03-2014.csv  Book_1_Peshi_Register_from_01-03-2015_to_31-03-2015.csv  Book_1_Peshi_Register_from_01-03-2016_to_31-03-2016.csv  Book_1_Peshi_Register_from_01-04-2014_to_30-04-2014.csv  (+32 more)
(+38 files in other folders)
